# MAX78xxx-RefDes

./: .gitmodules  .project  LICENSE.md  README.md  build.py  pyproject.toml
.github/workflows/: linter.yml  maxrefdes178.yml  no_pull_requests_to_main.yml
archive/maxrefdes178-ASL/: README.md
maxrefdes178/: .gitignore  .project  README.md
maxrefdes178-AIPortrait/: README.md
maxrefdes178-AIPortrait/maxrefdes178_max32666/: Makefile
maxrefdes178-AIPortrait/maxrefdes178_max78000_audio/: .cproject
maxrefdes178-ASL/: README.md
maxrefdes178-ASL/maxrefdes178_max32666/: Makefile
maxrefdes178-CatsDogs/: README.md
maxrefdes178-DigitDetection/: README.md
maxrefdes178-FaceId/: README.md
maxrefdes178-FacialRecognition/: README.md
maxrefdes178-ImageCapture/: README.md  _config.txt
maxrefdes178-UNet/: README.md
maxrefdes178-VCAudioPlayback/: README.md
maxrefdes178-WildLife/: README.md
maxrefdes178/maxrefdes178_android/app/src/main/cpp/PacketHelper/: CMakeLists.txt  MAXCAM_PacketHelper.c  MAXCAM_PacketHelper.h
maxrefdes178_common/: maxrefdes178_ble_packet.c  maxrefdes178_ble_packet.h  maxrefdes178_ble_packet_helper.c  maxrefdes178_build_info.h  maxrefdes178_definitions.h  maxrefdes178_utility.c  maxrefdes178_utility.h  maxrefdes178_version.h
maxrefdes178_doc/: README.md
maxrefdes178_wiki/: AppSwitcher.md  BlockDiagram.md  DebuggerOperation.md  DebuggingDemoFirmware.md  DevelopmentEnvironment.md  GettingStarted.md  Home.md  InputsOutputs.md  PortingApplications.md  PowerTree.md  ProgrammingFirmware.md  RecoveryProcedure.md  _Sidebar.md
(+3353 files in other folders)
